Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Peter McCluskey (May 1 2001)
  - convert mprintf calls to trio calls

Peter McCluskey (Apr 27 2001)
  - allow incremental update with folder_by_date on empty archive, improve
  error messages for missing gdbm file with folder_by_date, incremental update.

Peter McCluskey (Apr 26 2001)
  - fixed so that avoid_top_indices = folders works.

Peter McCluskey (Apr 24 2001)
  - fix urls at end of index page with folder_by_date.

Peter McCluskey (Apr 20 2001)
  - patch from Hisashi Gotoh <gotoh@horae.dti.ne.jp> to fix message/rfc822
   handling with showhtml = 0.

Peter McCluskey (Apr 18 2001)
  - changed configure script to check several directories for gdbm.h,
    provide --with-gdbm=DIR option.

Peter McCluskey (Apr 16 2001)
  - added patch from David Eisner <cradle@glue.umd.edu> to prevent subject
   matching on subject lines which have no Re:.
  - made hashreplylookup use the same code as hashreplynumlookup (fixes
   missing "Maybe in reply to" links in some messages.
  - made find_quote_prefix more cautious about recognizing nonstandard
   prefixes as quote prefixes (affects linkquotes and showhtml=2 options).

Peter McCluskey (Apr 14 2001)
  - add missing <ul> when set_show_msg_links == 0, pointed out by
   Emre Bastuz <info@emre.de>

Peter McCluskey (Apr 13 2001)
  - fixed portability problem in strcasestr.
  - fixed custom_archives to handle NONE properly.
  - removed a poorly thought out maybereply check in crossindexthread2
    that was apparently dropping some messages from the thread list.

Peter McCluskey (Apr 12 2001)
  - convert html tags for monthly_index, yearly_index to lowercase.
  - fixed indexing error in getname reported by David Eisner <cradle@glue.umd.edu>
  - fixed set_usegdbm compile error reported by Daniel.
  - fixed parentheses in printattachments
 

Peter McCluskey (Apr 10 2001)
  - Add check for *html deleted, gdbm index still present.
  - fix count of messages.